# GNSS-Metadata-Standard

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  eclipse-cdt-autoformatter.xml
Specifications/design/uml/: GnssMetadataModel.mdr  GnssMetadataModel.mdzip  Metadata Domain Model.mdzip
Specifications/documentation/: DraftMetadataStd.docx  DraftMetadataStd_012515.docx  DraftMetadataStd_17082017_v1.0.docx  DraftMetadataStd_19072017_v1.0.docx  DraftMetadataStd_19072017_v3.docx  ION_MetadataStd_V1.0.docx  ~$aftMetadataStd.docx
Specifications/documentation/archive/: XML_082614.docx
Specifications/documentation/older_versions/StandardDocument_V0.3/: DraftMetadataStd.docx
Specifications/documentation/review/: Example-GalileoE5aDATA.pptx  GalileoE5a-GPSL5.xml
Specifications/documentation/supplementary_first_draft/archive/: DraftMetadataStd_01_03_2016.docx  Standard_figs_082614.pptx
Specifications/documentation/supplementary_pre_V1.0/archive/: DraftMetadataStd_011115.docx  DraftMetadataStd_04062917.docx
Specifications/documentation/supplementary_pre_V1.0/review/: JamesTC_Notes.docx  Report_Comments_on_API_SDR.docx
Specifications/documentation/supplementary_second_draft/: DraftMetadataStd_ChangesHighlighted.docx
Specifications/examples/: encoder_examples.xlsx
Specifications/schema/: GnssMetadata.html  GnssMetadata.xsd
install/: .gitignore  141230-gps-4msps.xml  check_converter.m  log.txt
install/CODC/: 20170911_1118Z.sdrx  CheckData.m  CleanData.m  RunConverter.m
install/FHG/: CheckData.m  CheckFHG.m  CleanData.m  L125_III1b_15s.usb  L125_III1b_15s.usbx  RunConverter.m  ndec2hex.m  nhex2dec.m
install/FITWDP/: CheckData.m  CleanData.m  RunConverter.m  estec.xml
install/IFEN/: CheckData.m  CheckIFEN.m  CleanData.m  RunConverter.m  SX3_AltBOC_DualRF.smfx  SX3_AltBOC_DualRF_Band0_FE0_ANT0_f1191795000.stream  SX3_AltBOC_DualRF_Band1_FE0_ANT0_f1575420000.stream  SX3_AltBOC_DualRF_Band2_FE0_ANT1_f1191795000.stream  SX3_AltBOC_DualRF_Band3_FE0_ANT1_f1575420000.stream
install/JRC/: 150408_125245_UTC.xml  CheckData.m  CheckJRC.m  CleanData.m  RunConverter.m
install/SJTU/: CheckData.m  CleanData.m  compareSjtuSamples.m  sjtu_l1b1_metadata_test_20151105.xml
install/TRIGR/: .gitignore  CheckData.m  CheckTRIGR.m  CleanData.m  RunConverter.m  WideBand_1bit_L1_L2_E5a_E5b_000.tgx
source/: CMakeLists.txt
source/api/: CMakeLists.txt
source/api/inc/: GnssMetadata.h
source/api/inc/GnssMetadata/: AnyUri.h  AttributedObject.h  Band.h  BaseTypes.h  Block.h  Chunk.h  Cluster.h  Comment.h  Date.h  Duration.h  File.h  Frequency.h  IonStream.h  Lane.h  Lump.h  Metadata.h  Orientation.h  Oscillator.h  Position.h  RfConfiguration.h  Session.h  Source.h  System.h
source/api/inc/GnssMetadata/Xml/: AnyUriTranslator.h  BandTranslator.h  BlockTranslator.h  ChunkTranslator.h  ClusterTranslator.h  Context.h  DurationTranslator.h  FileSetTranslator.h  FileTranslator.h  FrequencyTranslator.h  LaneTranslator.h  LumpTranslator.h  MetadataTranslator.h  OrientationTranslator.h  OscillatorTranslator.h  PositionTranslator.h  RfConfigTranslator.h  SessionTranslator.h  SourceTranslator.h  StreamTranslator.h  SystemTranslator.h  Translator.h  XmlDefs.h  XmlProcessor.h
source/api/inc/tinyxml2/: tinyxml2.h
source/api/lib/: CMakeLists.txt
source/api/lib/GnssMetadata/: AnyUri.cpp  AttributedObject.cpp  Band.cpp  BaseTypes.cpp  Block.cpp  CMakeLists.txt  Chunk.cpp  Cluster.cpp  Comment.cpp  Date.cpp  Duration.cpp  File.cpp  Frequency.cpp  IonStream.cpp  Lane.cpp  Lump.cpp  Metadata.cpp  Orientation.cpp  Position.cpp  Session.cpp  Source.cpp  System.cpp
source/api/lib/GnssMetadata/Xml/: AnyUriTranslator.cpp  BandTranslator.cpp  BlockTranslator.cpp  ChunkTranslator.cpp  ClusterTranslator.cpp  DurationTranslator.cpp  FileSetTranslator.cpp  FileTranslator.cpp  FrequencyTranslator.cpp  LaneTranslator.cpp  LumpTranslator.cpp  MetadataTranslator.cpp  OrientationTranslator.cpp  OscillatorTranslator.cpp  PositionTranslator.cpp  RfConfigTranslator.cpp  SessionTranslator.cpp  SourceTranslator.cpp  StreamTranslator.cpp  SystemTranslator.cpp  Translator.cpp  XmlDefs.cpp  XmlProcessor.cpp
source/api/lib/tinyxml2/: CMakeLists.txt  tinyxml2.cpp
source/app/: CMakeLists.txt  Converter.cpp  DemoConverter.cpp  TestAPI.cpp  TestConverter.cpp
source/converter/: CMakeLists.txt
source/converter/inc/: BinaryBuffer.h  BinaryFileSink.h  BinaryFileSource.h  BinarySink.h  BinarySource.h  BlockInterpreter.h  ChunkInterpreter.h  ChunkInterpreter.hpp  Converter.h  EncoderFunctions.h  EndianFunctions.h  FormatFunctions.h  LaneInterpreter.h  SampleBuffer.h  SampleBuffer.hpp  SampleConverter.h  SampleConverter.hpp  SampleFileSink.h  SampleFileSink.hpp  SampleFrontEnd.h  SampleFrontEnd.hpp  SampleInterpreter.h  SampleInterpreterFactory.h  SampleInterpreterFactory.hpp  SampleSink.h  SampleSinkFactory.h  SampleSinkFactory.hpp  SampleSource.h  SampleStatisticsSink.h  SampleStatisticsSink.hpp  SampleStreamInfo.h  SinkedSampleInterpreter.h  SinkedSampleInterpreter.hpp  statistics.h
source/converter/lib/: BinaryBuffer.cpp  BinaryFileSink.cpp  BinaryFileSource.cpp  BinarySink.cpp  BinarySource.cpp  BlockInterpreter.cpp  CMakeLists.txt  EndianFunctions.cpp  LaneInterpreter.cpp  SampleConverter.cpp  statistics.cpp
